columns stack properly

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
     <main>
         <div class="main-div container container-fluid px-0">
             <div class="row">
-                <nav class="col navbar">
+                <nav class="col col-lg-3 navbar">
                     <a href="#" class="navbar-brand"><img id="logo-img" src="../images/logo.png" alt="ProdList Logo"></a>
                     <div class="" id="navLinks">
                         <ul class="navbar-nav">
@@ -39,7 +39,7 @@
                     </div>
                     
                 </nav>
-                <div class="col main-view">
+                <div class="col col-lg-9 main-view">
                     <form id="search-bar" action="">
                         <input id="search-input" type="text" placeholder="Search To-Do List">
                         <button id="search-btn" type="button"><img id="search-icon" src="../images/search-icon.png"></button>
