--- a/pages/index.html
+++ b/pages/index.html
@@ -13,43 +13,47 @@
     <main>
         <div class="main-div container container-fluid px-0">
             <div class="row">
-                <nav class="container col col-lg-3 navbar">
-                    <div class="row">
-                        <a href="#" class="col navbar-brand"><img id="logo-img" src="../images/logo.png" alt="ProdList Logo"></a>
-                        <button class="navbar-toggler collapsible" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"><img id="hamburger" src="../images/menu.png"></span>
-                        </button>
-                    <div class="" id="navLinks">
-                        <ul class="navbar-nav">
-                            <li class="nav-item hover-animation">
-                                <a href="#">Home</a>
-                            </li>
-                            <li class="nav-item hover-animation">
-                                <a href="">Projects</a>
-                            </li>
-                            <li class="nav-item hover-animation">
-                                <a href="">Grocery List</a>
-                            </li>
-                            <li class="nav-item hover-animation">
-                                <a href="">New Collection</a>
-                            </li>
-                            <li class="nav-item hover-animation">
-                                <a href="">Settings</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href=""><img id="profile-img" src="../images/profile-icon.jpg" alt=""></a>
-                            </li>
-                        </ul>
+                <div class="col col-1"></div>
+                <div class="col  col-lg-3">
+                    <button class="navbar-toggler collapsible" data-toggle="collapse" data-target="#nav-links"  aria-label="Toggle navigation"></button>
+                    <div class="l-navbar nav-bar">
+                        <nav class="container col nav">
+                            <div class="row">
+                                <a href="#" class="col navbar-brand"><img id="logo-img" src="../images/logo.png" alt="ProdList Logo"></a>
+                                <span class="navbar-toggler-icon"><img id="hamburger" src="../images/menu.png"></span>
+                                <div class="" id="nav-links">
+                                    <ul class="navbar-nav">
+                                        <li class="nav-item hover-animation active-nav-link">
+                                            <a class="nav-link" href="#">Home</a>
+                                        </li>
+                                        <li class="nav-item hover-animation">
+                                            <a class="nav-link" href="">Projects</a>
+                                        </li>
+                                        <li class="nav-item hover-animation">
+                                            <a class="nav-link" href="">Grocery List</a>
+                                        </li>
+                                        <li class="nav-item hover-animation">
+                                            <a class="nav-link" href="">New Collection</a>
+                                        </li>
+                                        <li class="nav-item hover-animation">
+                                            <a class="nav-link" href="">Settings</a>
+                                        </li>
+                                        <li>
+                                            <a href=""><img id="profile-img" src="../images/profile-icon.jpg" alt=""></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </nav>
                     </div>
-                    </div>
-                </nav>
+                </div>
                 <div class="col col-lg-7 main-view">
                     <form id="search-bar" action="">
                         <input id="search-input" type="text" placeholder="Search To-Do List">
                         <button id="search-btn" type="button"><img id="search-icon" src="../images/search-icon.png"></button>
                     </form>
                     <h1>Hello, Makeba</h1>
-                    <p id="date">Tuesday, 16 August, 2022</p>
+                    <p id="date">Wednesday, 17 August, 2022</p>
                     <div class="today-breakdown container">
                         <div class="row">
                             <div class="col tod-num"><span id="fin-num">0</span></div>
@@ -70,7 +74,7 @@
                         <!-- new to do items will go here -->
                     </div>
                 </div>
-                <div class="col col-2"></div>
+                <div class="col col-1"></div>
             </div>
         </div>
     </main>    
