"created log in page"

--- a/pages/index.html
+++ b/pages/index.html
@@ -52,7 +52,7 @@
                         <input id="search-input" type="text" placeholder="Search To-Do List">
                         <button id="search-btn" type="button"><img id="search-icon" src="../images/search-icon.png"></button>
                     </form>
-                    <h1>Hello, Makeba</h1>
+                    <h1>Hello<span id="welcome-name">, User</span></h1>
                     <p id="date">Wednesday, 17 August, 2022</p>
                     <div class="today-breakdown container">
                         <div class="row">
