--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -5,9 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="../extra/to-do-styles.css">
     <title>ProdList - Log In</title>
 </head>
 <body>
-    
+    <div class="main-div container container-fluid px-0">
+            <div class="row">
+                <div class="col col-3"></div>
+                <div class="col col-lg-7 main-view log-main-div">
+                    <h1>Log In</h1>
+                    <form action="index.html" class="container">
+                        <div class="log-username">
+                            <label class="log-label" for="username">Username:</label>
+                            <input class="log-input" id="username" type="text" placeholder="Username" required>
+                        </div>
+                        <div class="log-password">
+                            <label class="log-label" for="password">Password:</label>
+                            <input class="log-input" id="password" type="password" placeholder="Password" required>
+                            <button type="button" id="show-password">Show</button>
+                        </div>
+                        <button class="log-btn" type="submit">Log In</button>
+                        <div class="row log-link"><a href="">Don't have an account? Sign up</a></div>
+                    </form>
+                </div>
+                <div class="col col-2"></div>
+            </div>
+        </div>
+        <script src="../extra/login-script.js"></script>
 </body>
 </html>
