--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -7,31 +7,39 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="../extra/to-do-styles.css">
     <link rel="icon" href="../images/icon.png">
-    <title>ProdList - Log In</title>
+    <title>ProdList - Sign Up</title>
 </head>
 <body>
     <div class="main-div container container-fluid px-0">
             <div class="row">
                 <div class="col col-3"></div>
                 <div class="col col-lg-7 main-view log-main-div">
-                    <h1>Log In</h1>
-                    <form action="index.html" class="container">
+                    <h1>Sign Up</h1>
+                    <form id="sign-up" action="index.html" class="container">
+                        <div class="log-name">
+                            <label class="log-label" for="name">Name:</label>
+                            <input class="log-input" id="name" type="text" placeholder="Name" autocomplete="off" required>
+                        </div>
                         <div class="log-username">
                             <label class="log-label" for="username">Username:</label>
-                            <input class="log-input" id="username" type="text" placeholder="Username" required>
+                            <input class="log-input" id="username" type="text" placeholder="Username" autocomplete="off" required>
                         </div>
                         <div class="log-password">
                             <label class="log-label" for="password">Password:</label>
                             <input class="log-input" id="password" type="password" placeholder="Password" required>
                             <button type="button" id="show-password">Show</button>
                         </div>
-                        <button class="log-btn" type="submit">Log In</button>
-                        <div class="row log-link"><a href="../pages/sign-up.html">Don't have an account? Sign up</a></div>
+                        <div class="log-conf-password">
+                            <label class="log-label" for="conf-password">Confirm Password:</label>
+                            <input class="log-input" id="conf-password" type="password" placeholder="Confirm Password" required>
+                        </div>
+                        <button class="log-btn" type="submit">Sign Up</button>
+                        <div class="row log-link"><a href="../pages/log-in.html">Alredy have an account? Log In</a></div>
                     </form>
                 </div>
                 <div class="col col-2"></div>
             </div>
         </div>
-        <script src="../extra/login-script.js"></script>
+        <script src="../extra/signup-script.js"></script>
 </body>
 </html>
