--- a/pages/index.html
+++ b/pages/index.html
@@ -15,12 +15,11 @@
             <div class="row">
                 <div class="col col-1"></div>
                 <div class="col  col-lg-3">
-                    <button class="navbar-toggler collapsible" data-toggle="collapse" data-target="#nav-links"  aria-label="Toggle navigation"></button>
                     <div class="l-navbar nav-bar">
                         <nav class="container col nav">
                             <div class="row">
                                 <a href="#" class="col navbar-brand"><img id="logo-img" src="../images/logo.png" alt="ProdList Logo"></a>
-                                <span class="navbar-toggler-icon"><img id="hamburger" src="../images/menu.png"></span>
+                                <span class="navbar-toggler-icon collapsible" data-toggle="collapse" data-target="#nav-links"  aria-label="Toggle navigation"><img id="hamburger" src="../images/menu.png"></span></data-toggle=>
                                 <div class="" id="nav-links">
                                     <ul class="navbar-nav">
                                         <li class="nav-item hover-animation active-nav-link">
@@ -49,11 +48,20 @@
                 </div>
                 <div class="col col-lg-7 main-view">
                     <form id="search-bar" action="">
-                        <input id="search-input" type="text" placeholder="Search To-Do List">
+                        <input id="search-input" type="text" placeholder="Search To-Do List" autocomplete="off">
                         <button id="search-btn" type="button"><img id="search-icon" src="../images/search-icon.png"></button>
                     </form>
-                    <h1>Hello<span id="welcome-name">, User</span></h1>
-                    <p id="date">Wednesday, 17 August, 2022</p>
+                    <div class="welcome container">
+                        <div class="row">
+                            <div class="col-9">
+                                <h1>Hello<span id="welcome-name">, User</span></h1>
+                                <p id="date">Thursday, 18 August, 2022</p>
+                            </div>
+                            <div class="col-3">
+                                
+                            </div>
+                        </div>
+                    </div>
                     <div class="today-breakdown container">
                         <div class="row">
                             <div class="col tod-num"><span id="fin-num">0</span></div>
@@ -68,7 +76,7 @@
                     </div>
                     <div id="to-do-list">
                         <form id="add-item" action="">
-                            <input type="text" id="add-to-do" placeholder="Add a new to-do">
+                            <input type="text" id="add-to-do" placeholder="Add a new to-do" autocomplete="off">
                             <button id="add-button">+</button>
                         </form>
                         <!-- new to do items will go here -->
@@ -78,12 +86,12 @@
             </div>
         </div>
     </main>    
-    <script src="../extra/to-do-script.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script src="../extra/to-do-script.js"></script>
 </body>
 </html>
