--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="../extra/to-do-styles.css">
-    <link rel="icon" href="../images/icon.png">
+    <link rel="stylesheet" href="./extra/to-do-styles.css">
+    <link rel="icon" href="./images/icon.png">
     <title>ProdList - Home</title>
 </head>
 <body>
@@ -18,8 +18,8 @@
                     <div class="l-navbar nav-bar">
                         <nav class="container col nav">
                             <div class="row">
-                                <a href="#" class="col navbar-brand"><img id="logo-img" src="../images/logo.png" alt="ProdList Logo"></a>
-                                <span class="navbar-toggler-icon collapsible" data-toggle="collapse" data-target="#nav-links"  aria-label="Toggle navigation"><img id="hamburger" src="../images/menu.png"></span></data-toggle=>
+                                <a href="#" class="col navbar-brand"><img id="logo-img" src="./images/logo.png" alt="ProdList Logo"></a>
+                                <span class="navbar-toggler-icon collapsible" data-toggle="collapse" data-target="#nav-links"  aria-label="Toggle navigation"><img id="hamburger" src="./images/menu.png"></span></data-toggle=>
                                 <div class="" id="nav-links">
                                     <ul class="navbar-nav">
                                         <li class="nav-item hover-animation active-nav-link">
@@ -38,7 +38,7 @@
                                             <a class="nav-link" href="">Settings</a>
                                         </li>
                                         <li>
-                                            <a href=""><img id="profile-img" src="../images/profile-icon.jpg" alt=""></a>
+                                            <a href=""><img id="profile-img" src="./images/profile-icon.jpg" alt=""></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -48,17 +48,24 @@
                 </div>
                 <div class="col col-lg-7 main-view">
                     <form id="search-bar" action="">
-                        <input id="search-input" type="text" placeholder="Search To-Do List" autocomplete="off">
-                        <button id="search-btn" type="button"><img id="search-icon" src="../images/search-icon.png"></button>
+                        <input id="search-input" type="search" placeholder="Search To-Do List" autocomplete="off">
+                        <button id="search-btn" type="button"><img id="search-icon" src="./images/search-icon.png"></button>
                     </form>
                     <div class="welcome container">
                         <div class="row">
-                            <div class="col-9">
+                            <div class="col-7">
                                 <h1>Hello<span id="welcome-name">, User</span></h1>
                                 <p id="date">Thursday, 18 August, 2022</p>
                             </div>
-                            <div class="col-3">
-                                
+                            <div class="col-5">
+                                <select name="filter" id="filter">
+                                    <option value="filter">Filter</option>
+                                    <option value="unfinished">Unfinished</option>
+                                    <option value="a-z">A-Z</option>
+                                    <option value="z-a">Z-A</option>
+                                    <option value="recent">Most Recent</option>
+                                    <option value="oldest">Oldest</option>
+                                </select>
                             </div>
                         </div>
                     </div>
@@ -92,6 +99,6 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <script src="../extra/to-do-script.js"></script>
+    <script src="./extra/to-do-script.js"></script>
 </body>
 </html>
