"fixed log in submit location"

--- a/pages/log-in.html
+++ b/pages/log-in.html
@@ -15,7 +15,7 @@
                 <div class="col col-3"></div>
                 <div class="col col-lg-7 main-view log-main-div">
                     <h1>Log In</h1>
-                    <form action="index.html" class="container">
+                    <form action="../index.html" class="container">
                         <div class="log-username">
                             <label class="log-label" for="username">Username:</label>
                             <input class="log-input" id="username" type="text" placeholder="Username" required>
