--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -15,7 +15,7 @@
                 <div class="col col-3"></div>
                 <div class="col col-lg-7 main-view log-main-div">
                     <h1>Sign Up</h1>
-                    <form id="sign-up" action="index.html" class="container">
+                    <form id="sign-up" action="../index.html" class="container">
                         <div class="log-name">
                             <label class="log-label" for="name">Name:</label>
                             <input class="log-input" id="name" type="text" placeholder="Name" autocomplete="off" required>
