"welcome, user works"

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -18,7 +18,7 @@
                     <form id="sign-up" action="../index.html" class="container">
                         <div class="log-name">
                             <label class="log-label" for="name">Name:</label>
-                            <input class="log-input" id="name" type="text" placeholder="Name" autocomplete="off" required>
+                            <input name="name" class="log-input" id="name" type="text" placeholder="Name" autocomplete="off" required>
                         </div>
                         <div class="log-username">
                             <label class="log-label" for="username">Username:</label>
