"added auto date"

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <div class="welcome container">
                         <div class="row">
                             <div class="col-7">
-                                <h1>Hello<span id="welcome-name">, User</span></h1>
-                                <p id="date">Thursday, 18 August, 2022</p>
+                                <h1>Hello<span id="welcome-name"></span></h1>
+                                <p id="date"></p>
                             </div>
                             <div class="col-5">
                                 <select name="filter" id="filter">
