--- a/index.html
+++ b/index.html
@@ -13,31 +13,30 @@
     <main>
         <div class="main-div container container-fluid px-0">
             <div class="row">
-                <div class="col col-1"></div>
                 <div class="col col-lg-3">
                     <div class="l-navbar nav-bar">
                         <nav class="container col nav">
                             <div class="row">
-                                <a href="#" class="col navbar-brand"><img id="logo-img" src="./images/logo.png" alt="ProdList Logo"></a>
+                                <a href="" class="col navbar-brand"><img id="logo-img" src="./images/logo.png" alt="ProdList Logo"></a>
                                 <span class="navbar-toggler-icon collapsible" data-toggle="collapse" data-target="#nav-links"  aria-label="Toggle navigation"><img id="hamburger" src="./images/menu.png"></span></data-toggle=>
                                 <div class="" id="nav-links">
                                     <ul class="navbar-nav">
-                                        <li class="nav-item hover-animation active-nav-link">
-                                            <a class="nav-link" href="#">Home</a>
+                                        <li class="nav-item hover-animation active-nav-link home-link">
+                                            <a class="nav-link" href="">Home</a>
                                         </li>
-                                        <li class="nav-item hover-animation">
+                                        <li class="nav-item hover-animation projects-link">
                                             <a class="nav-link" href="">Projects</a>
                                         </li>
-                                        <li class="nav-item hover-animation">
+                                        <li class="nav-item hover-animation grocery-link">
                                             <a class="nav-link" href="">Grocery List</a>
                                         </li>
-                                        <li class="nav-item hover-animation">
+                                        <li class="nav-item hover-animation collection-link">
                                             <a class="nav-link" href="">New Collection</a>
                                         </li>
-                                        <li class="nav-item hover-animation">
+                                        <li class="nav-item hover-animation settings-link">
                                             <a class="nav-link" href="">Settings</a>
                                         </li>
-                                        <li>
+                                        <li class="container">
                                             <a href=""><img id="profile-img" src="./images/profile-icon.jpg" alt=""></a>
                                         </li>
                                     </ul>
@@ -46,6 +45,7 @@
                         </nav>
                     </div>
                 </div>
+                <div class="col col-1"></div>
                 <div class="col col-lg-7 main-view">
                     <div class="search">
                     <form id="search-bar" action="">
@@ -54,7 +54,7 @@
                     </form>
                     </div>
                     <div class="results-view"></div>
-                    <div class="page-view">
+                    <div class="home-page-view">
                     <div class="welcome container">
                         <div class="row">
                             <div class="col-7">
@@ -91,6 +91,10 @@
                             <button id="add-button">+</button>
                         </form>
                         <div id="list-items"></div>
+                    </div>
+                    <div id="completed-list">
+                        <button id="show-completed">Show completed items</button>
+                        <div id="completed-items" hidden></div>
                     </div>
                     </div>
                 </div>
