"added prodPoints functionality"

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -34,7 +34,7 @@
                             <input class="log-input" id="conf-password" type="password" placeholder="Confirm Password" required>
                         </div>
                         <button class="log-btn" type="submit">Sign Up</button>
-                        <div class="row log-link"><a href="../pages/log-in.html">Alredy have an account? Log In</a></div>
+                        <div class="row log-link"><a href="../pages/log-in.html">Already have an account? Log In</a></div>
                     </form>
                 </div>
                 <div class="col col-2"></div>
